--- a/story-dawntrail.html
+++ b/story-dawntrail.html
@@ -2,8 +2,60 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>黄金のレガシー - FF14</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            z-index: 1000;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            transition: all 0.3s ease; /* 滑らかな変化のためのトランジション */
+        }
+        /* ホバーエフェクトの追加 */
+        nav a:hover {
+            color: #ffd700; /* カーソルオンで色を変更（例: ゴールド） */
+            background-color: rgba(255, 255, 255, 0.1); /* 薄い背景色 */
+            padding: 5px 10px; /* 少し余白を追加 */
+            border-radius: 5px; /* 角を丸く */
+        }
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            z-index: 1000;
+        }
+        .music-player {
+            position: fixed;
+            top: 50px;
+            left: 10px;
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 10px;
+            border-radius: 5px;
+            z-index: 1000;
+            color: white;
+        }
+        body {
+            margin-top: 120px;
+            margin-bottom: 40px;
+            margin-left: 10px;
+        }
+    </style>
 </head>
 <body class="bg-dt">
     <div class="music-player">
@@ -27,77 +79,107 @@
         <a href="raid.html">レイド</a>
     </nav>
     <h1 class="theme-dt">黄金のレガシー</h1>
-    <p>あらすじ: NebelfeeとSchattenfeeはトライヨラと金光の峰を巡り、黄金の守護者と侵略者に挑み、新天地の遺産を守る。</p>
+    <p>あらすじ: NebelfeeとSchattenfeeはトライヨラと黄金を巡り、ザラと黄金の守護者に挑み、新大陸の未来を求める。</p>
     <div class="story-content">
-        <h2>第一章: トライヨラの船出</h2>
-        <p>トライヨラの港でNebelfeeは霧を纏い、新大陸へ船を進める。</p>
-        <p>Schattenfeeが影から現れ、クルレが二人を迎え入れた。</p>
-        <p>黄金の遺産の噂が響き、姉弟は旅を始める。</p>
-        <p>海風が船を押し、新天地が近づく。</p>
-        <h2>第二章: オルコ・パチャの風</h2>
-        <p>オルコ・パチャで蛮神ヴァリガルマンダが咆哮し、風が荒ぶる。</p>
-        <p>ウクランドが援護し、Nebelfeeは霧で毒を散らした。</p>
-        <p>Schattenfeeが忍術で動きを封じ、ヴァリガルマンダが倒れる。</p>
-        <p>山峡に静けさが戻り、姉弟は絆を深める。</p>
-        <h2>第三章: 金光の峰の守護者</h2>
-        <p>金光の峰で黄金の守護者ゴルドランが現れ、遺産を守る。</p>
-        <p>エリナが剣を手に立ち、Nebelfeeは霧で光を抑えた。</p>
-        <p>Schattenfeeが忍術で弱点を突き、ゴルドランが膝をつく。</p>
-        <p>峰に静寂が訪れ、姉弟は遺産の重さを知る。</p>
-        <h2>第四章: ソリューション・ナインの試練</h2>
-        <p>ソリューション・ナインで至天の座アルカディアが目覚め、電撃が響く。</p>
-        <p>クルレが分析し、Nebelfeeは霧で動きを封じる。</p>
-        <p>Schattenfeeが忍術で核を突き、アルカディアが止まった。</p>
-        <p>未来都市に静けさが戻り、姉弟は次へ進む。</p>
-        <h2>第五章: ウルクンチャイの雷</h2>
-        <p>ウルクンチャイで蛮神ラムウが雷を放ち、森が震える。</p>
-        <p>アルフィノが魔法で援護し、Nebelfeeは霧で雷を散らす。</p>
-        <p>Schattenfeeが忍術で動きを封じ、ラムウが去った。</p>
-        <p>森に静寂が広がり、姉弟は決意を新たにする。</p>
-        <h2>第六章: コザマルカの幻惑</h2>
-        <p>コザマルカで蛮神ラクシュミが民を惑わし、Nebelfeeは霧で幻を破る。</p>
-        <p>リーンとサンクレッドが援護し、Schattenfeeが忍術で倒す。</p>
-        <p>村に風が吹き、姉弟は遺産の守護を誓う。</p>
-        <p>だが、侵略者の影が近づいていた。</p>
-        <h2>第七章: ヤク・テルの炎</h2>
-        <p>ヤク・テルで蛮神イフリートが炎を噴き、砂が燃える。</p>
-        <p>ウリエンジェが魔法で援護し、Nebelfeeは霧で炎を鎮めた。</p>
-        <p>Schattenfeeが忍術でイフリートを倒し、砂漠に静けさが戻る。</p>
-        <p>姉弟は新天地の試練に立ち向かう。</p>
-        <h2>第八章: 星哭の谷の侵略者</h2>
-        <p>星哭の谷で侵略者ザラが現れ、遺産を奪おうとする。</p>
-        <p>エスティニアンが槍を手に立ち、Nebelfeeは霧で動きを封じる。</p>
-        <p>Schattenfeeが忍術で背後を突き、ザラが倒れた。</p>
-        <p>谷に静寂が訪れ、姉弟は未来を見据える。</p>
-        <h2>第九章: トゥララクの祈り</h2>
-        <p>トゥララクで暁の仲間が集い、Nebelfeeの霧が希望を守る。</p>
-        <p>Schattenfeeが忍術でザラの残党に迫り、クルレが祈りを捧げる。</p>
-        <p>リーンとウリエンジェが力を合わせ、遺産が輝いた。</p>
-        <p>黄金の未来が近づき、姉弟は最後の一歩を踏み出す。</p>
-        <h2>第十章: 黄金の夜明け</h2>
-        <p>トライヨラでザラが最後の咆哮を上げ、Nebelfeeの双剣が閃く。</p>
-        <p>Schattenfeeが忍術で未来を打ち立て、ザラが倒れた。</p>
-        <p>暁の祈りと共に遺産が守られ、新天地に夜明けが訪れる。</p>
-        <p>姉弟は新たな旅を誓い、黄金の空を見上げた。</p>
+        <h2>前日譚: 黄金の風と新大陸への旅立ち</h2>
+        <p>メーティオンを倒し、終末を止めた後、NebelfeeとSchattenfeeはグリダニアで休息の日々を過ごしていた。姉は20歳、弟は17歳になり、霧と影の力は頂点を極めていた。暁の血盟の拠点では、仲間たちが新たな冒険について語り合っていた。ミンフィリアが静かに告げた。「新大陸トライヨラで黄金の遺産が眠っている。探しの手が必要だ」と。</p>
+        <p>グリダニアの森に暖かな風が吹き、新大陸の黄金を思わせた。Nebelfeeは母ミスティアの双剣を手に、霧を操って訓練を重ねていた。彼女の動きは流れるようで、霧が剣先に渦を巻いた。Schattenfeeは父カゲロウの手裏剣を握り、木々の影に隠れて技を磨いた。彼の投擲は神業に近く、忍者の技術が極まっていた。姉弟は互いの成長を認め合い、絆を深めていた。</p>
+        <p>ある夜、ミンフィリアは姉弟を拠点の広間に呼んだ。彼女の白いローブが灯りに映え、穏やかな声で語った。「トライヨラで黄金の遺産を巡る争いが起きている。ザラという存在が全てを支配しようとしている」と。Nebelfeeは双剣を手に持つ決意を新たにし、「母の霧で未来を」と呟いた。Schattenfeeは影に隠れ、「父の影で戦う」と答えた。ミンフィリアは二人に微笑み、彼らの覚悟を信じた。</p>
+        <p>アルフィノが現れ、新大陸への旅の準備を始めた。彼の青いローブが風に揺れ、若き指導者としての鋭い瞳が姉弟を見つめた。「トライヨラへの船旅は長い。でも、君たちの力が必要だ」と。Nebelfeeは霧を操り、海風に備えた。Schattenfeeは手裏剣を腰に帯び、影での移動を練習した。暁の仲間たちが飛空艇を準備し、旅立ちの時が近づいた。</p>
+        <p>タタルが小さな鞄を手に、姉弟に近づいた。「これを持って行ってね。新大陸は未知だから気をつけて」と笑顔で渡した。ウリエンジェはエーテルの流れを調べ、「トライヨラの敵は強大だ。でも、君たちなら」と励ました。Nebelfeeは霧を盾に変え、Schattenfeeは影に溶け込んだ。姉弟は仲間たちの温かさに感謝し、心を強くした。</p>
+        <p>ある朝、ミンフィリアは姉弟に旅立ちを命じた。「トライヨラでクルレが待っている。黄金の遺産を守って」と。Nebelfeeは双剣を背に負い、霧を操って準備を整えた。Schattenfeeは手裏剣を手に、影に隠れて姉のそばに立った。姉弟は互いの手を握り、グリダニアの港を越えて新大陸へ向かう決意を固めた。黄金の風が彼らを呼び、新たな旅が始まった。</p>
+        <p>霧と影が彼らの背を守り、暁の拠点は旅立ちの準備で活気づいた。ミンフィリアは遠くから見守り、心の中で祈った。「この子たちがトライヨラに未来をもたらすように」と。姉弟の足音が港に響き、運命の道が開かれた。霧隠れの谷の記憶が彼らを支え、黄金のレガシーへの第一歩が刻まれた。</p>
+
+        <h2>第一章: トライヨラの港</h2>
+        <p>トライヨラの港に船が着いた時、Nebelfeeは霧を纏い、新大陸へ足を踏み入れた。彼女の双剣が黄金の光に映え、20歳の女性は異国の風に目を凝らした。Schattenfeeが影から現れ、姉のそばに立った。彼の手裏剣が港の喧騒に紛れず、17歳の瞳には決意が宿っていた。港の灯りが揺れ、運命が動き出した。</p>
+        <p>クルレが二人を迎え入れた。彼女の紫のローブが風に揺れ、穏やかな声で語った。「トライヨラが争いに揺れている。君たちの力が必要だ」と。Nebelfeeは霧を操り、港の空気を清めた。Schattenfeeは影に隠れ、周囲を警戒した。姉弟は初めての新大陸に戸惑いながらも、心を一つにした。</p>
+        <p>トライヨラの港を進む道すがら、Nebelfeeは霧を盾に変え、周囲を警戒した。彼女の双剣が風を切り、霧が港を舞った。Schattenfeeは影を渡り、姉の背後を守った。彼の手裏剣が微かに光り、忍者の技が冴えていた。港の喧騒が彼らを包み、不穏な気配が漂っていた。クルレは静かに言った。「黄金の峰へ急ごう」と。</p>
+        <p>港の奥で、ザラの使徒が現れた。黄金の甲冑が光り、鋭い咆哮が響いた。Nebelfeeは霧を濃くし、使徒の視界を奪った。彼女の双剣が甲冑を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて使徒を翻弄した。クルレの魔法が援護し、使徒が退いた。トライヨラに静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。クルレは疲れ果てながらも、「よくやったね」と労った。彼女は港を見つめ、「これが始まりだ」と告げた。姉弟は互いの手を握り、初めての新大陸での勝利に小さな誇りを感じた。</p>
+        <p>トライヨラの港に風が吹き、灯りが静まった。Nebelfeeは霧を操り、港の空気を清めた。Schattenfeeは影に隠れ、静かに休息した。クルレは先導し、姉弟は彼女の背を追った。黄金の足跡が港に残り、彼らの心に響いた。黄金の旅が始まり、霧が風に溶けていった。</p>
+        <p>夜が訪れ、トライヨラの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。港の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>トライヨラの港が姉弟の力を試した。霧と影が使徒を退け、黄金の峰への道を開いた。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
+        <h2>第二章: ウルクレイの風</h2>
+        <p>ウルクレイの砂漠に着いた時、蛮神ヴァリガルマンダが咆哮を上げていた。風が荒ぶり、砂が舞った。Nebelfeeは双剣を手に、霧を操って風を鎮めようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はウルクレイの過酷な戦いに覚悟を固めた。</p>
+        <p>エスティニアンが槍を手に現れた。彼の黒い甲冑が光に映え、鋭い声で語った。「ヴァリガルマンダを止めねば」と。Nebelfeeは霧を濃くし、ヴァリガルマンダの視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて弱点を狙った。エスティニアンの槍が援護し、砂漠が揺れた。</p>
+        <p>ヴァリガルマンダが反撃し、風の刃がウルクレイを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が鱗を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。エスティニアンの槍が援護し、ヴァリガルマンダが倒れた。砂に静けさが戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。エスティニアンは疲れ果てながらも、「よくやったね」と労った。彼は砂漠を見つめ、「黄金に近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>ウルクレイに静寂が広がり、風が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。エスティニアンは暁に報告するため去り、姉弟はウルクレイを見渡した。ヴァリガルマンダの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、ウルクレイの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。砂漠の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>ウルクレイの風は鎮まり、姉弟の力がトライヨラに希望をもたらした。霧と影がヴァリガルマンダを倒し、砂漠に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
+        <h2>第三章: シャーローの黄金</h2>
+        <p>シャーローの街に着いた時、蛮神ゴルドラゴンが現れていた。黄金が輝き、街が揺れた。Nebelfeeは双剣を手に、霧を操って光を抑えようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はシャーローの過酷な戦いに覚悟を固めた。</p>
+        <p>リーン・ウォータースが剣を手に現れた。彼女の鋭い声が響き、「ゴルドラゴンを止めねば」と。Nebelfeeは霧を濃くし、ゴルドラゴンの視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて動きを封じた。リーン・ウォータースの剣が援護し、街が揺れた。</p>
+        <p>ゴルドラゴンが反撃し、黄金の波がシャーローを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が鱗を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。リーン・ウォータースの剣が援護し、ゴルドラゴンが倒れた。街に静けさが戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。リーン・ウォータースは疲れ果てながらも、「よくやったね」と労った。彼女は街を見つめ、「遺産に近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>シャーローに静寂が広がり、黄金が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。リーン・ウォータースは暁に報告するため去り、姉弟はシャーローを見渡した。ゴルドラゴンの光が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、シャーローの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。街の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>シャーローの黄金は鎮まり、姉弟の力がトライヨラに希望をもたらした。霧と影がゴルドラゴンを倒し、街に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
+        <h2>第四章: ヨクトランの守護者</h2>
+        <p>ヨクトランに着いた時、黄金の守護者アークが現れていた。巨体が揺れ、平原が震えた。Nebelfeeは双剣を手に、霧を操って動きを封じようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はヨクトランの過酷な戦いに覚悟を固めた。</p>
+        <p>アルフィノが魔法を手に現れた。彼の青いローブが光に映え、鋭い声で語った。「アークを止めねば」と。Nebelfeeは霧を濃くし、アークの視界を奪った。彼女の双剣が巨体を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて弱点を狙った。アルフィノの魔法が援護し、平原が揺れた。</p>
+        <p>アークが反撃し、力の波がヨクトランを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が巨体を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。アルフィノの魔法が援護し、アークが倒れた。平原に静けさが戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。アルフィノは疲れ果てながらも、「よくやったね」と労った。彼は平原を見つめ、「ザラに近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>ヨクトランに静寂が広がり、風が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。アルフィノは暁に報告するため去り、姉弟はヨクトランを見渡した。アークの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、ヨクトランの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。平原の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>ヨクトランの守護者は鎮まり、姉弟の力がトライヨラに希望をもたらした。霧と影がアークを倒し、平原に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
+        <h2>第五章: 金光の峰の王</h2>
+        <p>金光の峰に着いた時、蛮神ザラが現れていた。黄金が輝き、山が揺れた。Nebelfeeは双剣を手に、霧を操って光を抑えようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は金光の峰の過酷な戦いに覚悟を固めた。</p>
+        <p>クルレとエスティニアンが援護に現れた。クルレの魔法が光を放ち、エスティニアンの槍が響いた。Nebelfeeは霧を濃くし、ザラの視界を奪った。彼女の双剣が黄金を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて動きを封じた。援護が響き、山が揺れた。</p>
+        <p>ザラが反撃し、黄金の波が金光の峰を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が黄金を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。クルレとエスティニアンの援護が響き、ザラが倒れた。山に静けさが戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。クルレは疲れ果てながらも、「よくやったね」と労った。エスティニアンは槍を収め、「遺産が守られた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>金光の峰に静寂が広がり、黄金が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。クルレとエスティニアンは暁に報告するため去り、姉弟は金光の峰を見渡した。ザラの光が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、金光の峰の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。山の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、最後の戦いが待っていた。</p>
+        <p>金光の峰の王は鎮まり、姉弟の力がトライヨラに希望をもたらした。霧と影がザラを倒し、山に平穏が戻った。星空の下で、彼らは最後の挑戦への覚悟を固めた。</p>
+
+        <h2>第六章: 黄金の夜明け</h2>
+        <p>金光の峰に戻った時、ザラが再び現れていた。黄金が輝き、山が揺れた。Nebelfeeの双剣が光を裂き、霧を操って立ち向かった。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は最終決戦に覚悟を固めた。暁の仲間が祈りを響かせ、トライヨラが息を吹き返した。</p>
+        <p>ミンフィリアの祈りが響き、暁の力が金光の峰に響いた。Nebelfeeは霧を嵐に変え、ザラの動きを封じた。彼女の双剣が黄金を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を心臓に投げた。ザラが膝をつき、暁の希望が山に輝いた。</p>
+        <p>ザラが最後の反撃を放ち、黄金の波が金光の峰を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が心臓を貫き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。ミンフィリアの祈りが援護し、ザラが消えた。金光の峰に夜明けが訪れた。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。ミンフィリアは疲れ果てながらも、「よくやったね」と労った。暁の仲間が集い、「ありがとう」と告げた。姉弟は互いの手を握り、黄金の夜明けが訪れたことを感じた。</p>
+        <p>金光の峰の空に朝日が昇った。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。ミンフィリアは暁に報告を準備し、姉弟は未来を見据えた。霧と影が交わり、新たな旅への力が育った。トライヨラの危機が終わり、平穏が戻った。</p>
+        <p>朝日の下、Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。金光の峰の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。黄金の未来が彼らを呼び、新たな旅が始まった。</p>
+        <p>黄金の夜明けがトライヨラに希望をもたらした。霧と影がザラを倒し、新たな時代が幕を開けた。朝日の下で、彼らは次の冒険への誓いを立てた。</p>
+
+        <h2>後日譚: 黄金の旅路</h2>
+        <p>ザラを倒した後、NebelfeeとSchattenfeeはトライヨラで休息の日々を過ごした。姉は20歳、弟は17歳で、暁の拠点に戻る前に金光の峰を見上げていた。ミンフィリアが二人を抱きしめ、「君たちのおかげで遺産が守られた」と涙を浮かべた。Nebelfeeは双剣を手に、母の意志を感じた。Schattenfeeは手裏剣を握り、父の遺志を胸に刻んだ。</p>
+        <p>トライヨラの街は静けさを取り戻し、霧が木々を包んだ。Nebelfeeは霧を操り、街の空気を清めた。Schattenfeeは影に隠れ、静かに休息した。クルレが駆け寄り、「すごかったよ！お疲れ様」と笑顔を見せた。アルフィノは魔法を手に、「これからが新たな始まりだ」と呟いた。姉弟は仲間たちの温かさに心を解いた。</p>
+        <p>ある夜、ミンフィリアは姉弟に新たな旅を提案した。「トライヨラは救われた。でも、エオルゼアにはまだ未来がある」と。Nebelfeeは双剣を背に負い、「母の意志で進む」と誓った。Schattenfeeは手裏剣を腰に帯び、「父の遺志で戦う」と決めた。姉弟は互いの手を握り、次の冒険への覚悟を固めた。</p>
+        <p>トライヨラで訓練が再開された。Nebelfeeは霧を操る術を磨き、Schattenfeeは影の技を極めた。暁の仲間たちが彼らを支え、エオルゼアの未来を守る準備を整えた。姉弟は互いを励まし、絆を深めた。霧と影が共存し、彼らの力が育った。</p>
+        <p>ある朝、姉弟はトライヨラの奥で休息した。Nebelfeeは霧を見上げ、母ミスティアの笑顔を思い出した。Schattenfeeは影に触れ、父カゲロウの教えを感じた。霧と影が彼らを導き、エオルゼアの未来を照らした。姉弟の物語は続き、新たな試練が待っていた。</p>
+        <p>黄金の旅路がトライヨラに希望をもたらした。霧と影が彼らを守り、新たな未来を開いた。運命の旅路はまだ続いていた。</p>
     </div>
     <div class="story-nav">
         <a href="story-endwalker.html">前章: 暁月の終焉</a>
         <span class="disabled">次章</span>
     </div>
+
+    <footer>
+        <div class="footer-nav">
+            <a href="story-endwalker.html">前章: 暁月の終焉</a>
+            <a href="#" class="disabled">次章</a>
+        </div>
+        <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
+    </footer>
+    
     <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const tracks = [
-                {"src": "assets/Bee My Honey ～至天の座アルカディア：ライトヘビー級～.mp3", "name": "Bee My Honey"},
                 {"src": "assets/Dawntrail.mp3", "name": "Dawntrail"},
-                {"src": "assets/Give It All～至天の座アルカディア：ライトヘビー級～.mp3", "name": "Give It All"},
-                {"src": "assets/一つの路.mp3", "name": "一つの路"},
-                {"src": "assets/二人の路.mp3", "name": "二つの路"},
-                {"src": "assets/山峡の涼風 ～オルコ・パチャ：昼～.mp3", "name": "山峡の涼風"},
-                {"src": "assets/星なき摩天楼 ～ソリューション・ナイン～.mp3", "name": "星なき摩天楼"},
-                {"src": "assets/火花と閃光～外征前哨ヴァンガード～.mp3", "name": "火花と閃光"},
-                {"src": "assets/終わりなき軌跡.mp3", "name": "終わりなき軌跡"},
-                {"src": "assets/金煌なる民 〜トライヨラ：昼〜 .mp3", "name": "金煌なる民"}
+                {"src": "assets/Open Sky.mp3", "name": "Open Sky"},
+                {"src": "assets/命の火 ～ストーリーズ・フロム・ザ・スカイ～.mp3", "name": "命の火"},
+                {"src": "assets/天幕の饗宴.mp3", "name": "天幕の饗宴"},
+                {"src": "assets/嵐の中の灯火 ～希望の園エデン：共鳴編～.mp3", "name": "嵐の中の灯火"},
+                {"src": "assets/新たなる大地 ～ヨークトラン大陸昼～.mp3", "name": "新たなる大地"},
+                {"src": "assets/星芒の戦士 ～ヴァリガルマンダ討滅戦～.mp3", "name": "星芒の戦士"},
+                {"src": "assets/黄金の王 ～ザラ討滅戦～.mp3", "name": "黄金の王"},
+                {"src": "assets/黄金の都市 ～シャーロー昼～.mp3", "name": "黄金の都市"},
+                {"src": "assets/黄金色の夜明け.mp3", "name": "黄金色の夜明け"}
             ];
             const bgm = document.getElementById("bgm");
             const currentTrack = document.getElementById("current-track");
