--- a/story-endwalker.html
+++ b/story-endwalker.html
@@ -2,8 +2,60 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>暁月の終焉 - FF14</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            z-index: 1000;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            transition: all 0.3s ease; /* 滑らかな変化のためのトランジション */
+        }
+        /* ホバーエフェクトの追加 */
+        nav a:hover {
+            color: #ffd700; /* カーソルオンで色を変更（例: ゴールド） */
+            background-color: rgba(255, 255, 255, 0.1); /* 薄い背景色 */
+            padding: 5px 10px; /* 少し余白を追加 */
+            border-radius: 5px; /* 角を丸く */
+        }
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            z-index: 1000;
+        }
+        .music-player {
+            position: fixed;
+            top: 50px;
+            left: 10px;
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 10px;
+            border-radius: 5px;
+            z-index: 1000;
+            color: white;
+        }
+        body {
+            margin-top: 120px;
+            margin-bottom: 40px;
+            margin-left: 10px;
+        }
+    </style>
 </head>
 <body class="bg-ew">
     <div class="music-player">
@@ -26,78 +78,144 @@
         <a href="gallery.html">ギャラリー</a>
         <a href="raid.html">レイド</a>
     </nav>
-    <h1>暁月の終焉</h1>
-    <p>あらすじ: NebelfeeとSchattenfeeはラヴィリンソスと星泪の海を巡り、メーティオンと不屈の女神に挑み、暁月の終焉を迎える。</p>
+    <h1 class="theme-ew">暁月の終焉</h1>
+    <p>あらすじ: NebelfeeとSchattenfeeはラヴィリンソスと星泪の海を巡り、メーティオンと終末に挑み、暁月の希望を求める。</p>
     <div class="story-content">
-        <h2>第一章: ラヴィリンソスの再会</h2>
-        <p>ラヴィリンソスの地下でNebelfeeとSchattenfeeが再会し、霧と影が交わる。</p>
-        <p>アルフィノが二人を導き、終末の危機が明らかになる。</p>
-        <p>暁の仲間が集い、世界を救う決意が響いた。</p>
-        <p>姉弟は終焉への旅を始める。</p>
-        <h2>第二章: オールド・シャーレアンの試練</h2>
-        <p>オールド・シャーレアンで蛮神ゾディアークが現れ、闇が広がる。</p>
-        <p>ヤ・シュトラが魔法で援護し、Nebelfeeは霧で闇を散らす。</p>
-        <p>Schattenfeeが忍術で動きを封じ、ゾディアークが倒れた。</p>
-        <p>知識の都に静けさが戻り、姉弟は次へ進む。</p>
-        <h2>第三章: サベネアの不屈</h2>
-        <p>サベネア島で不屈の女神アテナが現れ、終末を加速させる。</p>
-        <p>ウリエンジェが魔法で援護し、Nebelfeeは霧で動きを封じる。</p>
-        <p>Schattenfeeが忍術で弱点を突き、アテナが膝をついた。</p>
-        <p>島に風が吹き、姉弟は希望を抱く。</p>
-        <h2>第四章: ガレマール帝国の混沌</h2>
-        <p>ガレマール帝国で蛮神アナンタが咆哮し、氷が砕ける。</p>
-        <p>エスティニアンが槍を手に立ち、Nebelfeeは霧で氷を散らす。</p>
-        <p>Schattenfeeが忍術でアナンタを倒し、帝国に静寂が訪れる。</p>
-        <p>廃墟の中、姉弟は終末の影を感じた。</p>
-        <h2>第五章: 万魔殿の咆哮</h2>
-        <p>万魔殿パンデモニウムで混沌が目覚め、闇が響き合う。</p>
-        <p>リーンとサンクレッドが援護し、Nebelfeeは霧で闇を抑える。</p>
-        <p>Schattenfeeが忍術で核を突き、パンデモニウムが止まった。</p>
-        <p>深淵の静寂が広がり、姉弟は次へ進む。</p>
-        <h2>第六章: エルピスの花園</h2>
-        <p>エルピスで蛮神ハイデリンが現れ、光が世界を包む。</p>
-        <p>イダが癒しを与え、Nebelfeeは霧で光を調和させた。</p>
-        <p>Schattenfeeが忍術でハイデリンを支え、花園が輝く。</p>
-        <p>古代の地に希望が灯り、姉弟は決意を新たにする。</p>
-        <h2>第七章: 星泪の海の絶望</h2>
-        <p>星泪の海でメーティオンが現れ、絶望が宇宙を覆う。</p>
-        <p>クルルが援護し、Nebelfeeは霧で絶望を散らした。</p>
-        <p>Schattenfeeが忍術で背後を突き、メーティオンが静まる。</p>
-        <p>星々の歌が響き、最後の戦いが近づく。</p>
-        <h2>第八章: トラールの大峡谷</h2>
-        <p>トラールの大峡谷で蛮神ガルーダが風を荒らし、空が裂ける。</p>
-        <p>タタルが祈りを捧げ、Nebelfeeは霧で風を鎮めた。</p>
-        <p>Schattenfeeが忍術でガルーダを倒し、峡谷に静けさが戻る。</p>
-        <p>姉弟は終末への道を進む。</p>
-        <h2>第九章: 月の祈り</h2>
-        <p>月の地下で暁の仲間が集い、Nebelfeeの霧が希望を守る。</p>
-        <p>Schattenfeeが忍術でメーティオンに迫り、アルフィノが支える。</p>
-        <p>リーンとウリエンジェが力を合わせ、終末が近づく。</p>
-        <p>月の光が輝き、姉弟は最後の一歩を踏み出す。</p>
+        <h2>前日譚: 終末の響きと星海への旅立ち</h2>
+        <p>第一世界に夜を取り戻し、ハーデスを倒した後、NebelfeeとSchattenfeeはグリダニアで休息の日々を過ごしていた。姉は18歳、弟は15歳になり、霧と影の力は完全な調和に達していた。暁の血盟の拠点では、仲間たちが新たな危機について語り合っていた。ミンフィリアが静かに告げた。「終末がエオルゼアに迫っている。救いの手が必要だ」と。</p>
+        <p>グリダニアの森に不穏な風が吹き、星海の終末を思わせた。Nebelfeeは母ミスティアの双剣を手に、霧を操って訓練を重ねていた。彼女の動きは流れるようで、霧が剣先に渦を巻いた。Schattenfeeは父カゲロウの手裏剣を握り、木々の影に隠れて技を磨いた。彼の投擲は完璧に近く、忍者の技術が極まっていた。姉弟は互いの成長を認め合い、絆を深めていた。</p>
+        <p>ある夜、ミンフィリアは姉弟を拠点の広間に呼んだ。彼女の白いローブが灯りに映え、穏やかな声で語った。「終末が世界を滅ぼそうとしている。メーティオンという存在が全ての希望を奪う」と。Nebelfeeは双剣を手に持つ決意を新たにし、「母の霧で希望を」と呟いた。Schattenfeeは影に隠れ、「父の影で戦う」と答えた。ミンフィリアは二人に微笑み、彼らの覚悟を信じた。</p>
+        <p>アルフィノが現れ、星海への旅の準備を始めた。彼の青いローブが風に揺れ、若き指導者としての鋭い瞳が姉弟を見つめた。「ラヴィリンソスで準備が進んでいる。終末を止めて」と。Nebelfeeは霧を操り、未知の空間に備えた。Schattenfeeは手裏剣を腰に帯び、影での移動を練習した。暁の仲間たちが飛空艇を準備し、旅立ちの時が近づいた。</p>
+        <p>タタルが小さな鞄を手に、姉弟に近づいた。「これを持って行ってね。星海は遠いから気をつけて」と笑顔で渡した。ウリエンジェはエーテルの流れを調べ、「終末の敵は強大だ。でも、君たちなら」と励ました。Nebelfeeは霧を盾に変え、Schattenfeeは影に溶け込んだ。姉弟は仲間たちの温かさに感謝し、心を強くした。</p>
+        <p>ある朝、ミンフィリアは姉弟に旅立ちを命じた。「ラヴィリンソスで暁が待っている。終末を止めて」と。Nebelfeeは双剣を背に負い、霧を操って準備を整えた。Schattenfeeは手裏剣を手に、影に隠れて姉のそばに立った。姉弟は互いの手を握り、グリダニアの港を越えて星海へ向かう決意を固めた。終末の響きが彼らを呼び、新たな旅が始まった。</p>
+        <p>霧と影が彼らの背を守り、暁の拠点は旅立ちの準備で活気づいた。ミンフィリアは遠くから見守り、心の中で祈った。「この子たちがエオルゼアに希望をもたらすように」と。姉弟の足音が港に響き、運命の道が開かれた。霧隠れの谷の記憶が彼らを支え、暁月の終焉への第一歩が刻まれた。</p>
+
+        <h2>第一章: ラヴィリンソスの星</h2>
+        <p>ラヴィリンソスに着いた時、Nebelfeeは霧を纏い、星海への旅を始めた。彼女の双剣が星光に映え、18歳の少女は異空間の静寂に目を凝らした。Schattenfeeが影から現れ、姉のそばに立った。彼の手裏剣が星に紛れず、15歳の瞳には決意が宿っていた。星が揺れ、運命が動き出した。</p>
+        <p>クルルが二人を迎え入れた。彼女の紫のローブが星に溶け、穏やかな声で語った。「終末が近づいている。君たちの力が必要だ」と。Nebelfeeは霧を操り、星の空気を清めた。Schattenfeeは影に隠れ、周囲を警戒した。姉弟は初めての星海に戸惑いながらも、心を一つにした。</p>
+        <p>ラヴィリンソスの星を進む道すがら、Nebelfeeは霧を盾に変え、周囲を警戒した。彼女の双剣が風を切り、霧が星を舞った。Schattenfeeは影を渡り、姉の背後を守った。彼の手裏剣が微かに光り、忍者の技が冴えていた。星の静寂が彼らを包み、不穏な気配が漂っていた。クルルは静かに言った。「ゾディアークへ急ごう」と。</p>
+        <p>星の奥で、ゾディアークの使徒が現れた。黒い影が光を放ち、鋭い咆哮が響いた。Nebelfeeは霧を濃くし、使徒の視界を奪った。彼女の双剣が影を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて使徒を翻弄した。クルルの魔法が援護し、使徒が退いた。ラヴィリンソスに静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。クルルは疲れ果てながらも、「よくやったね」と労った。彼女は星を見つめ、「これが始まりだ」と告げた。姉弟は互いの手を握り、初めての星海での勝利に小さな誇りを感じた。</p>
+        <p>ラヴィリンソスの星が彼らを包み、ゾディアークへの道を照らした。Nebelfeeは霧を操り、星の空気を清めた。Schattenfeeは影に隠れ、静かに休息した。クルルは先導し、姉弟は彼女の背を追った。終末の足跡が星に残り、彼らの心に響いた。暁月の旅が始まり、霧が星に溶けていった。</p>
+        <p>夜が訪れ、ラヴィリンソスの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。星の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。終末の危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>ラヴィリンソスの星が姉弟の力を試した。霧と影が使徒を退け、ゾディアークへの道を開いた。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
+        <h2>第二章: サベネアの神獣</h2>
+        <p>サベネア島に着いた時、蛮神エレシュキガルが咆哮を上げていた。砂が揺れ、島が震えた。Nebelfeeは双剣を手に、霧を操って動きを封じようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はサベネアの過酷な戦いに覚悟を固めた。</p>
+        <p>エスティニアンが槍を手に現れた。彼の黒い甲冑が光に映え、鋭い声で語った。「エレシュキガルを止めねば」と。Nebelfeeは霧を濃くし、エレシュキガルの視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて弱点を狙った。エスティニアンの槍が援護し、島が揺れた。</p>
+        <p>エレシュキガルが反撃し、砂の波がサベネアを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が鱗を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。エスティニアンの槍が援護し、エレシュキガルが倒れた。砂に静けさが戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。エスティニアンは疲れ果てながらも、「よくやったね」と労った。彼は島を見つめ、「終末に近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>サベネア島に静寂が広がり、砂が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。エスティニアンは暁に報告するため去り、姉弟はサベネアを見渡した。エレシュキガルの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、サベネアの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。島の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。終末の危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>サベネアの神獣は鎮まり、姉弟の力がエオルゼアに希望をもたらした。霧と影がエレシュキガルを倒し、島に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
+        <h2>第三章: ガレマールの虚無</h2>
+        <p>ガレマルドに着いた時、蛮神ゾディアークが虚無を放っていた。雪が黒く染まり、帝国が揺れた。Nebelfeeは双剣を手に、霧を操って虚無を散らそうとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はガレマールの過酷な戦いに覚悟を固めた。</p>
+        <p>アルフィノが魔法を手に現れた。彼の青いローブが雪に映え、鋭い声で語った。「ゾディアークを止めねば」と。Nebelfeeは霧を濃くし、ゾディアークの視界を奪った。彼女の双剣が虚無を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて動きを封じた。アルフィノの魔法が援護し、帝国が揺れた。</p>
+        <p>ゾディアークが反撃し、虚無の波がガレマールを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が虚無を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。アルフィノの魔法が援護し、ゾディアークが消えた。雪に静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。アルフィノは疲れ果てながらも、「よくやったね」と労った。彼は雪を見つめ、「終末の核心に近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>ガレマールドに静寂が広がり、雪が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。アルフィノは暁に報告するため去り、姉弟はガレマールを見渡した。ゾディアークの虚無が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、ガレマールの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。帝国の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。終末の危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>ガレマールの虚無は鎮まり、姉弟の力がエオルゼアに希望をもたらした。霧と影がゾディアークを倒し、帝国に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
+        <h2>第四章: 月に潜む影</h2>
+        <p>月に着いた時、ハイデリンが現れていた。光が揺れ、月が震えた。Nebelfeeは双剣を手に、霧を操って光を抑えようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は月の過酷な戦いに覚悟を固めた。</p>
+        <p>ヤ・シュトラが魔法を手に現れた。彼女の杖が光を放ち、穏やかな声で語った。「ハイデリンを止めねば」と。Nebelfeeは霧を濃くし、ハイデリンの視界を奪った。彼女の双剣が光を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて動きを封じた。ヤ・シュトラの魔法が援護し、月が揺れた。</p>
+        <p>ハイデリンが反撃し、光の波が月を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が光を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。ヤ・シュトラの魔法が援護し、ハイデリンが消えた。月に静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。ヤ・シュトラは疲れ果てながらも、「よくやったね」と労った。彼女は月を見つめ、「真実が明らかになった」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>月に静寂が広がり、光が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。ヤ・シュトラは暁に報告するため去り、姉弟は月を見渡した。ハイデリンの光が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、月の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。月の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。終末の危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>月に潜む影は鎮まり、姉弟の力がエオルゼアに希望をもたらした。霧と影がハイデリンを倒し、月に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
+        <h2>第五章: カルディアの深層</h2>
+        <p>カルディアに着いた時、蛮神アナベースが現れていた。闇が深まり、島が揺れた。Nebelfeeは双剣を手に、霧を操って闇を散らそうとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はカルディアの過酷な戦いに覚悟を固めた。</p>
+        <p>リーン・ウォータースが剣を手に現れた。彼女の鋭い声が響き、「アナベースを止めねば」と。Nebelfeeは霧を濃くし、アナベースの視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて弱点を狙った。リーン・ウォータースの剣が援護し、島が揺れた。</p>
+        <p>アナベースが反撃し、闇の波がカルディアを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が鱗を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。リーン・ウォータースの剣が援護し、アナベースが倒れた。島に静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。リーン・ウォータースは疲れ果てながらも、「よくやったね」と労った。彼女は島を見つめ、「終末に近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>カルディアに静寂が広がり、闇が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。リーン・ウォータースは暁に報告するため去り、姉弟はカルディアを見渡した。アナベースの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、カルディアの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。島の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。終末の危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>カルディアの深層は鎮まり、姉弟の力がエオルゼアに希望をもたらした。霧と影がアナベースを倒し、島に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
+        <h2>第六章: 星泪の海の絶望</h2>
+        <p>星泪の海に着いた時、メーティオンが現れていた。絶望が響き、星海が揺れた。Nebelfeeは双剣を手に、霧を操って絶望を散らそうとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は星泪の海の過酷な戦いに覚悟を固めた。</p>
+        <p>エメトセルクが現れ、仲間として立ち向かった。彼の黒いローブが光に映え、穏やかな声で語った。「メーティオンを止めねば」と。Nebelfeeは霧を濃くし、メーティオンの視界を奪った。彼女の双剣が絶望を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて動きを封じた。エメトセルクの魔法が援護し、星海が揺れた。</p>
+        <p>メーティオンが反撃し、絶望の波が星泪の海を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が絶望を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。エメトセルクの魔法が援護し、メーティオンが消えた。星海に静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。エメトセルクは疲れ果てながらも、「よくやったね」と労った。彼は星海を見つめ、「希望が灯った」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>星泪の海に静寂が広がり、星が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。エメトセルクは暁に報告するため去り、姉弟は星泪の海を見渡した。メーティオンの絶望が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、星泪の海の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。星海の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。終末の危機が彼らを呼び、最後の戦いが待っていた。</p>
+        <p>星泪の海の絶望は鎮まり、姉弟の力がエオルゼアに希望をもたらした。霧と影がメーティオンを倒し、星海に平穏が戻った。星空の下で、彼らは最後の挑戦への覚悟を固めた。</p>
+
+        <h2>第七章: ラヴィリンソスの祈り</h2>
+        <p>ラヴィリンソスに戻った時、暁の仲間が祈りを捧げていた。Nebelfeeは霧を操り、希望を守った。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は最後の戦いに覚悟を固めた。クルルが星を指し、メーティオンに立ち向かった。</p>
+        <p>アルフィノとヤ・シュトラが援護に現れた。アルフィノの魔法が光を放ち、ヤ・シュトラの杖が響いた。Nebelfeeは霧を濃くし、メーティオンの視界を奪った。彼女の双剣が絶望を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げてメーティオンに迫った。暁の祈りが響き、希望が星に輝いた。</p>
+        <p>メーティオンが反撃し、絶望の波がラヴィリンソスを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が絶望を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。アルフィノとヤ・シュトラの援護が響き、終末の訪れが近づいた。最後の戦いが始まった。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。アルフィノは疲れ果てながらも、「よくやったね」と労った。ヤ・シュトラは魔法を収め、「最後の一歩だ」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>ラヴィリンソスに静寂が広がり、星が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。アルフィノとヤ・シュトラは暁に報告するため去り、姉弟はラヴィリンソスを見渡した。メーティオンの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな希望が灯った。</p>
+        <p>夜が訪れ、ラヴィリンソスの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。ラヴィリンソスの静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。終末の危機が彼らを呼び、最後の戦いが待っていた。</p>
+        <p>ラヴィリンソスの祈りがエオルゼアに希望をもたらした。霧と影がメーティオンに近づき、星に平穏が戻った。星空の下で、彼らは最後の挑戦への覚悟を固めた。</p>
+
+        <h2>第八章: 終末の鳥</h2>
+        <p>星泪の海に再び着いた時、メーティオンの群れが現れていた。絶望が響き、星海が揺れた。Nebelfeeは双剣を手に、霧を操って絶望を切り裂こうとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は終末の鳥との戦いに覚悟を固めた。</p>
+        <p>エスティニアンとリーン・ウォータースが援護に現れた。エスティニアンの槍が光を放ち、リーン・ウォータースの剣が響いた。Nebelfeeは霧を濃くし、メーティオンの視界を奪った。彼女の双剣が鳥を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて群れを断った。援護が響き、星海が揺れた。</p>
+        <p>メーティオンの群れが反撃し、絶望の波が星泪の海を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が絶望を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。エスティニアンとリーン・ウォータースの援護が響き、鳥の群れが消えた。星海に静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。エスティニアンは疲れ果てながらも、「よくやったね」と労った。リーン・ウォータースは剣を収め、「終わりが近い」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>星泪の海に静寂が広がり、星が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。エスティニアンとリーン・ウォータースは暁に報告するため去り、姉弟は星泪の海を見渡した。メーティオンの群れが消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、星泪の海の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。星海の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。終末の危機が彼らを呼び、最後の戦いが待っていた。</p>
+        <p>終末の鳥は鎮まり、姉弟の力がエオルゼアに希望をもたらした。霧と影がメーティオンの群れを倒し、星海に平穏が戻った。星空の下で、彼らは最後の挑戦への覚悟を固めた。</p>
+
+        <h2>第九章: 星海の希望</h2>
+        <p>星泪の海に再び着いた時、メーティオンが再び現れていた。絶望が響き、星海が揺れた。Nebelfeeは霧を操り、希望を守った。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は最後の戦いに覚悟を固めた。暁の仲間が祈りを捧げ、メーティオンに立ち向かった。</p>
+        <p>ミンフィリアとエメトセルクが援護に現れた。ミンフィリアの祈りが光を放ち、エメトセルクの魔法が響いた。Nebelfeeは霧を濃くし、メーティオンの視界を奪った。彼女の双剣が絶望を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げてメーティオンに迫った。暁の祈りが響き、希望が星に輝いた。</p>
+        <p>メーティオンが反撃し、絶望の波が星泪の海を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が絶望を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。ミンフィリアとエメトセルクの援護が響き、終末の訪れが近づいた。最後の戦いがクライマックスに達した。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。ミンフィリアは疲れ果てながらも、「よくやったね」と労った。エメトセルクは笑顔で、「これで終わりだ」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>星泪の海に静寂が広がり、星が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。ミンフィリアとエメトセルクは暁に報告するため去り、姉弟は星泪の海を見渡した。メーティオンの絶望が消え、彼らの力が試された。霧と影が交わり、新たな希望が灯った。</p>
+        <p>夜が訪れ、星泪の海の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。星海の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。終末の危機が彼らを呼び、最後の戦いが待っていた。</p>
+        <p>星海の希望がエオルゼアに光をもたらした。霧と影がメーティオンに近づき、星に平穏が戻った。星空の下で、彼らは最後の挑戦への覚悟を固めた。</p>
+
         <h2>第十章: 暁月の夜明け</h2>
-        <p>星泪の海でメーティオンが咆哮し、Nebelfeeの双剣が絶望を裂く。</p>
-        <p>Schattenfeeが忍術で希望を打ち立て、メーティオンが倒れた。</p>
-        <p>暁の祈りと共に世界が息を吹き返し、夜明けが訪れる。</p>
-        <p>姉弟は新たな旅を誓い、星空を見上げた。</p>
+        <p>星泪の海に着いた時、メーティオンが最後の咆哮を上げていた。Nebelfeeの双剣が絶望を裂き、霧を操って立ち向かった。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は最終決戦に覚悟を固めた。暁の仲間が祈りを響かせ、エオルゼアが息を吹き返した。</p>
+        <p>ミンフィリアの祈りが響き、暁の力が星泪の海に響いた。Nebelfeeは霧を嵐に変え、メーティオンの動きを封じた。彼女の双剣が絶望を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を心臓に投げた。メーティオンが膝をつき、暁の希望が星に輝いた。</p>
+        <p>メーティオンが最後の反撃を放ち、絶望の波が星泪の海を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が心臓を貫き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。ミンフィリアの祈りが援護し、メーティオンが消えた。星泪の海に夜明けが訪れた。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。ミンフィリアは疲れ果てながらも、「よくやったね」と労った。暁の仲間が集い、「ありがとう」と告げた。姉弟は互いの手を握り、暁月の夜明けが訪れたことを感じた。</p>
+        <p>星泪の海の空に朝日が昇った。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。ミンフィリアは暁に報告を準備し、姉弟は未来を見据えた。霧と影が交わり、新たな旅への力が育った。エオルゼアの危機が終わり、平穏が戻った。</p>
+        <p>朝日の下、Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。星泪の海の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。暁月の未来が彼らを呼び、新たな旅が始まった。</p>
+        <p>暁月の夜明けがエオルゼアに希望をもたらした。霧と影がメーティオンを倒し、新たな時代が幕を開けた。朝日の下で、彼らは次の冒険への誓いを立てた。</p>
+
+        <h2>後日譚: 暁月の旅路</h2>
+        <p>メーティオンを倒した後、NebelfeeとSchattenfeeはグリダニアに戻った。姉は18歳、弟は15歳で、暁の拠点で仲間たちと再会した。ミンフィリアが二人を抱きしめ、「君たちのおかげで終末が止まった」と涙を浮かべた。Nebelfeeは双剣を手に、母の意志を感じた。Schattenfeeは手裏剣を握り、父の遺志を胸に刻んだ。</p>
+        <p>グリダニアの森は静けさを取り戻し、霧が木々を包んだ。Nebelfeeは霧を操り、森の空気を清めた。Schattenfeeは影に隠れ、静かに休息した。タタルが駆け寄り、「すごかったよ！お疲れ様」と笑顔を見せた。アルフィノは魔法を手に、「これからが新たな始まりだ」と呟いた。姉弟は仲間たちの温かさに心を解いた。</p>
+        <p>ある夜、ミンフィリアは姉弟に新たな旅を提案した。「終末は去った。でも、エオルゼアにはまだ未来がある」と。Nebelfeeは双剣を背に負い、「母の意志で進む」と誓った。Schattenfeeは手裏剣を腰に帯び、「父の遺志で戦う」と決めた。姉弟は互いの手を握り、次の冒険への覚悟を固めた。</p>
+        <p>グリダニアで訓練が再開された。Nebelfeeは霧を操る術を磨き、Schattenfeeは影の技を極めた。暁の仲間たちが彼らを支え、エオルゼアの未来を守る準備を整えた。姉弟は互いを励まし、絆を深めた。霧と影が共存し、彼らの力が育った。</p>
+        <p>ある朝、姉弟は森の奥で休息した。Nebelfeeは霧を見上げ、母ミスティアの笑顔を思い出した。Schattenfeeは影に触れ、父カゲロウの教えを感じた。霧と影が彼らを導き、エオルゼアの未来を照らした。姉弟の物語は続き、新たな試練が待っていた。</p>
+        <p>暁月の旅路がエオルゼアに希望をもたらした。霧と影が彼らを守り、新たな未来を開いた。運命の旅路はまだ続いていた。</p>
     </div>
     <div class="story-nav">
         <a href="story-shadowbringers.html">前章: 漆黒のヴィランズ</a>
         <a href="story-dawntrail.html">次章: 黄金のレガシー</a>
     </div>
+
+    <footer>
+        <div class="footer-nav">
+            <a href="story-shadowbringers.html">前章: 漆黒のヴィランズ</a>
+            <a href="story-dawntrail.html">次章: 黄金のレガシー</a>
+        </div>
+        <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
+    </footer>
+    
     <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const tracks = [
-                {"src": "assets/Athena the Tireless One.mp3", "name": "不屈のアテナ"},
                 {"src": "assets/Close in the Distance.mp3", "name": "Close in the Distance"},
-                {"src": "assets/Endwalker - Footfalls.mp3", "name": "Endwalker - Footfalls"},
+                {"src": "assets/Endwalker.mp3", "name": "Endwalker"},
                 {"src": "assets/Flow.mp3", "name": "Flow"},
-                {"src": "assets/Scream ～万魔殿パンデモニウム：煉獄編～.mp3", "name": "Scream"},
-                {"src": "assets/White Stone Black ～万魔殿パンデモニウム：煉獄編～.mp3", "name": "White Stone Black"},
-                {"src": "assets/Your Answer ～ハイデリン討滅戦～.mp3", "name": "Your Answer"},
-                {"src": "assets/想いが動かす力.mp3", "name": "想いが動かす力"},
+                {"src": "assets/Answers.mp3", "name": "Answers"},
+                {"src": "assets/白銀の悪魔 ～女神ソフィア討滅戦～.mp3", "name": "白銀の悪魔"},
+                {"src": "assets/神の愛を讃える地 ～雪と氷の試練～.mp3", "name": "神の愛を讃える地"},
                 {"src": "assets/終焉の戦い.mp3", "name": "終焉の戦い"},
-                {"src": "assets/迷夢 ～ラヴィリンソス：夜～.mp3", "name": "迷夢"}
+                {"src": "assets/終極の戦い.mp3", "name": "終極の戦い"},
+                {"src": "assets/英霊のエギ ～ゾディアーク討滅戦～.mp3", "name": "英霊のエギ"},
+                {"src": "assets/希望の園エデン.mp3", "name": "希望の園エデン"}
             ];
             const bgm = document.getElementById("bgm");
             const currentTrack = document.getElementById("current-track");
