--- a/story-heavensward.html
+++ b/story-heavensward.html
@@ -2,8 +2,60 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>蒼天のイシュガルド - FF14</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            z-index: 1000;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            transition: all 0.3s ease; /* 滑らかな変化のためのトランジション */
+        }
+        /* ホバーエフェクトの追加 */
+        nav a:hover {
+            color: #ffd700; /* カーソルオンで色を変更（例: ゴールド） */
+            background-color: rgba(255, 255, 255, 0.1); /* 薄い背景色 */
+            padding: 5px 10px; /* 少し余白を追加 */
+            border-radius: 5px; /* 角を丸く */
+        }
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            z-index: 1000;
+        }
+        .music-player {
+            position: fixed;
+            top: 50px;
+            left: 10px;
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 10px;
+            border-radius: 5px;
+            z-index: 1000;
+            color: white;
+        }
+        body {
+            margin-top: 120px;
+            margin-bottom: 40px;
+            margin-left: 10px;
+        }
+    </style>
 </head>
 <body class="bg-hw">
     <div class="music-player">
@@ -29,61 +81,127 @@
     <h1 class="theme-hw">蒼天のイシュガルド</h1>
     <p>あらすじ: 竜と人の抗争の中、NebelfeeとSchattenfeeはイシュガルドと氷風の峠でニーズヘッグと氷の使徒に挑み、蒼天の真実を求める。</p>
     <div class="story-content">
+        <h2>前日譚: 竜詩の響きと旅立ちの準備</h2>
+        <p>アルテマウェポンを倒し、新生エオルゼアの夜明けを迎えた後、NebelfeeとSchattenfeeはグリダニアで休息の日々を過ごしていた。姉は12歳、弟は9歳になり、霧と影の力は日々成長していた。暁の血盟の拠点では、仲間たちが新たな危機について語り合っていた。ミンフィリアが静かに告げた。「イシュガルドで竜と人の戦いが激化している。助けが必要だ」と。</p>
+        <p>グリダニアの森に冷たい風が吹き、遠くイシュガルドの雪原を思わせた。Nebelfeeは母ミスティアの双剣を手に、霧を操って訓練を重ねていた。彼女の動きは流れるようで、霧が剣先に渦を巻いた。Schattenfeeは父カゲロウの手裏剣を握り、木々の影に隠れて技を磨いた。彼の投擲は正確さを増し、忍者の鋭さが宿っていた。姉弟は互いの成長を認め合い、絆を深めていた。</p>
+        <p>ある夜、ミンフィリアは姉弟を拠点の広間に呼んだ。彼女の白いローブが灯りに映え、穏やかな声で語った。「竜詩戦争がイシュガルドを苦しめている。ニーズヘッグという竜が人々を襲い、和平の道が閉ざされつつある」と。Nebelfeeは双剣を手に持つ決意を新たにし、「母の霧で守る」と呟いた。Schattenfeeは影に隠れ、「父の影で戦う」と答えた。ミンフィリアは二人に微笑み、彼らの覚悟を信じた。</p>
+        <p>アルフィノが現れ、イシュガルドへの旅の準備を始めた。彼の青いローブが風に揺れ、若き指導者としての鋭い瞳が姉弟を見つめた。「クルザスの雪原は厳しい。でも、君たちの力が必要だ」と。Nebelfeeは霧を操り、寒さに備えた。Schattenfeeは手裏剣を腰に帯び、影での移動を練習した。暁の仲間たちが物資を準備し、旅立ちの時が近づいた。</p>
+        <p>タタルが小さな鞄を手に、姉弟に近づいた。「これを持って行ってね。寒いから気をつけて」と笑顔で渡した。ウリエンジェはエーテルの流れを調べ、「イシュガルドの竜は強敵だ。でも、君たちなら」と励ました。Nebelfeeは霧を盾に変え、Schattenfeeは影に溶け込んだ。姉弟は仲間たちの温かさに感謝し、心を強くした。</p>
+        <p>ある朝、ミンフィリアは姉弟に旅立ちを命じた。「イシュガルドでアイメリク卿が待っている。竜との戦いを終わらせて」と。Nebelfeeは双剣を背に負い、霧を操って準備を整えた。Schattenfeeは手裏剣を手に、影に隠れて姉のそばに立った。姉弟は互いの手を握り、グリダニアの森を越えてクルザスへ向かう決意を固めた。竜詩の響きが彼らを呼び、新たな旅が始まった。</p>
+        <p>霧と影が彼らの背を守り、暁の拠点は旅立ちの準備で活気づいた。ミンフィリアは遠くから見守り、心の中で祈った。「この子たちがイシュガルドに希望をもたらすように」と。姉弟の足音が森に響き、運命の道が開かれた。霧隠れの谷の記憶が彼らを支え、蒼天の真実への第一歩が刻まれた。</p>
+
         <h2>第一章: クルザスの雪</h2>
-        <p>クルザス西部高地の雪原でNebelfeeは霧を纏い、旅を始める。</p>
-        <p>Schattenfeeが影から現れ、アイメリク卿が二人をイシュガルドへ導く。</p>
-        <p>竜詩戦争の傷跡が雪に刻まれ、姉弟の心に響いた。</p>
-        <p>蒼天の旅が始まり、霧が雪に溶けていく。</p>
+        <p>クルザス西部高地の雪原に着いた時、Nebelfeeは霧を纏い、旅を始めた。彼女の双剣が雪に映え、12歳の少女は冷たい風に立ち向かった。Schattenfeeが影から現れ、姉のそばに立った。彼の手裏剣が雪に埋もれず、9歳の瞳には決意が宿っていた。雪原は静かで、竜の咆哮が遠くに響いた。</p>
+        <p>アイメリク卿が二人をイシュガルドへ導いた。彼の青い甲冑が雪に映え、穏やかな声で語った。「竜詩戦争がこの地を苦しめている。君たちの力が必要だ」と。Nebelfeeは霧を操り、雪を散らした。Schattenfeeは影に隠れ、周囲を警戒した。姉弟は初めての雪国に戸惑いながらも、心を一つにした。</p>
+        <p>雪原を進む道すがら、Nebelfeeは霧を盾に変え、寒さを防いだ。彼女の双剣が風を切り、雪が舞った。Schattenfeeは影を渡り、姉の背後を守った。彼の手裏剣が微かに光り、忍者の技が冴えていた。竜の足跡が雪に残り、不穏な気配が漂っていた。アイメリクは静かに言った。「ニーズヘッグが近い」と。</p>
+        <p>雪原の奥で、竜の群れが現れた。鋭い爪と咆哮が姉弟を襲った。Nebelfeeは霧を濃くし、竜の視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて竜を翻弄した。アイメリクの剣が援護し、竜の群れが退いた。雪原に静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。アイメリクは疲れ果てながらも、「よくやったね」と労った。彼は竜の足跡を調べ、「イシュガルドへ急ごう」と告げた。姉弟は互いの手を握り、初めての雪原での勝利に小さな誇りを感じた。</p>
+        <p>クルザスの雪が彼らを包み、イシュガルドへの道を照らした。Nebelfeeは霧を操り、雪を清めた。Schattenfeeは影に隠れ、静かに休息した。アイメリクは先導し、姉弟は彼の背を追った。竜詩戦争の傷跡が雪に刻まれ、彼らの心に響いた。蒼天の旅が始まり、霧が雪に溶けていった。</p>
+        <p>夜が訪れ、雪原の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。雪原の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。イシュガルドの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>クルザスの雪が姉弟の力を試した。霧と影が竜を退け、イシュガルドへの道を開いた。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
         <h2>第二章: 雲海の巨獣</h2>
-        <p>アバラシア雲海で蛮神ビスマルクが咆哮し、空が揺れる。</p>
-        <p>イゼルが竜の声を代弁し、Nebelfeeは霧で巨体を包む。</p>
-        <p>Schattenfeeが忍術で翼を狙い、アルフィノが魔法で援護した。</p>
-        <p>ビスマルクが沈み、雲海に静寂が広がる。</p>
+        <p>アバラシア雲海に着いた時、蛮神ビスマルクが咆哮を上げていた。空が揺れ、雲が裂けた。Nebelfeeは双剣を手に、霧を操って巨体を包もうとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は雲海の過酷な戦いに覚悟を固めた。</p>
+        <p>イゼルが現れ、竜の声を代弁した。彼女の白い髪が風に揺れ、穏やかな声で語った。「ビスマルクを止めねば」と。Nebelfeeは霧を濃くし、ビスマルクの視界を奪った。彼女の双剣が翼を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて翼を狙った。アルフィノの魔法が援護し、空が揺れた。</p>
+        <p>ビスマルクが反撃し、風の刃が雲海を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が巨体を切りつけ、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。イゼルの声が響き、アルフィノの魔法がビスマルクを包んだ。巨獣が沈み、雲海に静寂が広がった。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。イゼルは疲れ果てながらも、「よくやったね」と労った。アルフィノは魔法を収め、「イシュガルドに一歩近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>アバラシア雲海に風が吹き、雲が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。イゼルとアルフィノは暁に報告するため去り、姉弟は雲海を見渡した。ビスマルクの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、雲海の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。雲海の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。イシュガルドの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>雲海の巨獣は鎮まり、姉弟の力がイシュガルドに希望をもたらした。霧と影が蛮神を倒し、雲海に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
         <h2>第三章: 氷風の峠の使徒</h2>
-        <p>氷風の峠で氷と風を操る使徒が現れ、ニーズヘッグの名を叫ぶ。</p>
-        <p>エスティニアンが竜の眼を手に持つ中、Nebelfeeは霧で氷を散らす。</p>
-        <p>Schattenfeeが影から迫り、イダが傷を癒した。</p>
-        <p>使徒が倒れ、峠に冷たい風が吹き抜ける。</p>
+        <p>氷風の峠に着いた時、氷と風を操る使徒が現れていた。ニーズヘッグの名を叫び、冷たい風が吹き荒れた。Nebelfeeは双剣を手に、霧を操って氷を散らそうとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は峠の過酷な戦いに覚悟を固めた。</p>
+        <p>エスティニアンが竜の眼を手に現れた。彼の槍が光を放ち、鋭い声で語った。「この使徒を倒せ」と。Nebelfeeは霧を濃くし、使徒の視界を奪った。彼女の双剣が氷を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて動きを封じた。イダの癒しの魔法が援護し、峠が揺れた。</p>
+        <p>使徒が反撃し、氷の刃が峠を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が氷を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。エスティニアンの槍が援護し、イダの魔法が使徒を包んだ。氷風が弱まり、峠に静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。エスティニアンは疲れ果てながらも、「よくやったね」と労った。イダは癒しの魔法を収め、「ニーズヘッグに近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>氷風の峠に風が吹き、雪が静まった。Nebelfeeは霧を操り、峠の空気を清めた。Schattenfeeは影に隠れ、静かに休息した。エスティニアンとイダは暁に報告するため去り、姉弟は峠を見渡した。使徒の叫びが消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、峠の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。峠の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。イシュガルドの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>氷風の峠の使徒は鎮まり、姉弟の力がイシュガルドに希望をもたらした。霧と影がニーズヘッグに一歩近づき、峠に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
         <h2>第四章: ドラヴァニアの幻影</h2>
-        <p>高地ドラヴァニアで蛮神シヴァが現れ、氷の舞が響く。</p>
-        <p>イゼルの記憶が響き、Nebelfeeは霧で幻影を切り裂く。</p>
-        <p>Schattenfeeが忍術で動きを封じ、シヴァが消えた。</p>
-        <p>氷の涙が地に落ち、姉弟は真実を見つめる。</p>
+        <p>高地ドラヴァニアに着いた時、蛮神シヴァが現れていた。氷の舞が響き、雪が舞った。Nebelfeeは双剣を手に、霧を操って幻影を切り裂こうとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はドラヴァニアの過酷な戦いに覚悟を固めた。</p>
+        <p>イゼルが現れ、彼女の記憶が響いた。「シヴァは私の過去だ」と。Nebelfeeは霧を濃くし、シヴァの視界を奪った。彼女の双剣が氷を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて動きを封じた。イゼルの声が援護し、シヴァが揺れた。</p>
+        <p>シヴァが反撃し、氷の嵐がドラヴァニアを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が幻影を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。イゼルの記憶が響き、シヴァが消えた。氷の涙が地に落ち、静寂が広がった。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。イゼルは疲れ果てながらも、「よくやったね」と労った。彼女は氷の涙を見つめ、「真実が近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>ドラヴァニアに雪が静まり、空が清んだ。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。イゼルは暁に報告するため去り、姉弟はドラヴァニアを見渡した。シヴァの舞が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、ドラヴァニアの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。ドラヴァニアの静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。イシュガルドの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>ドラヴァニアの幻影は鎮まり、姉弟の力がイシュガルドに希望をもたらした。霧と影がシヴァを倒し、ドラヴァニアに平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
         <h2>第五章: アジス・ラーの鼓動</h2>
-        <p>アジス・ラーで機工城アレクサンダーが目覚め、時が歪む。</p>
-        <p>シドが警告を発し、Nebelfeeは霧で視界を奪った。</p>
-        <p>Schattenfeeが忍術で核を突き、アレクサンダーが止まる。</p>
-        <p>古代の遺跡に静寂が訪れ、竜の咆哮が近づく。</p>
+        <p>アジス・ラーに着いた時、機工城アレクサンダーが目覚めていた。時が歪み、古代の遺跡が揺れた。Nebelfeeは双剣を手に、霧を操って視界を奪おうとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はアジス・ラーの過酷な戦いに覚悟を固めた。</p>
+        <p>シドが現れ、警告を発した。「アレクサンダーは危険だ」と。Nebelfeeは霧を濃くし、アレキサンダーの視界を奪った。彼女の双剣が機械を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を核に投げた。シドの技術が援護し、アレクサンダーが止まった。竜の咆哮が近づいた。</p>
+        <p>アレクサンダーが反撃し、光の波が遺跡を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が核を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。シドの道具が援護し、アレクサンダーが止まった。遺跡に静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。シドは疲れ果てながらも、「よくやったね」と労った。彼は遺跡を調べ、「ニーズヘッグが近い」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>アジス・ラーに静寂が広がり、空が清んだ。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。シドは暁に報告するため去り、姉弟は遺跡を見渡した。アレキサンダーの鼓動が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、アジス・ラーの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。アジス・ラーの静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。イシュガルドの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>アジス・ラーの鼓動は鎮まり、姉弟の力がイシュガルドに希望をもたらした。霧と影がアレキサンダーを倒し、遺跡に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
         <h2>第六章: イシュガルドの誓い</h2>
-        <p>イシュガルドでナイツ・オブ・ラウンドが現れ、王の名を掲げる。</p>
-        <p>アイメリクが剣を手に立ち、Nebelfeeは霧で守りを固めた。</p>
-        <p>Schattenfeeが影から騎士を翻弄し、誓いが砕ける。</p>
-        <p>聖堂に静けさが戻り、姉弟は決意を新たにする。</p>
+        <p>イシュガルドに着いた時、ナイツ・オブ・ラウンドが現れていた。王の名を掲げ、聖堂が揺れた。Nebelfeeは双剣を手に、霧を操って守りを固めた。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はイシュガルドの聖なる戦いに覚悟を固めた。</p>
+        <p>アイメリクが剣を手に現れた。彼の青い甲冑が光を放ち、鋭い声で語った。「この誓いを砕け」と。Nebelfeeは霧を濃くし、ナイツの視界を奪った。彼女の双剣が騎士を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて騎士を翻弄した。アイメリクの剣が援護し、聖堂が揺れた。</p>
+        <p>ナイツが反撃し、光の刃が聖堂を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が光を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。アイメリクの剣が援護し、ナイツの誓いが砕けた。聖堂に静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。アイメリクは疲れ果てながらも、「よくやったね」と労った。彼は聖堂を見つめ、「和平に近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>イシュガルドに静寂が広がり、空が清んだ。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。アイメリクは暁に報告するため去り、姉弟は聖堂を見渡した。ナイツの誓いが消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、イシュガルドの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。イシュガルドの静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。イシュガルドの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>イシュガルドの誓いは鎮まり、姉弟の力が和平に一歩近づけた。霧と影がナイツを倒し、聖堂に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
         <h2>第七章: 魔神の森</h2>
-        <p>低地ドラヴァニアで蛮神セフィロトが木々を飲み込み、生命を吸う。</p>
-        <p>ウリエンジェが魔法を放ち、Nebelfeeは霧で力を抑えた。</p>
-        <p>Schattenfeeが忍術で根を断ち、セフィロトが倒れる。</p>
-        <p>森が息を吹き返し、姉弟に希望が灯る。</p>
+        <p>低地ドラヴァニアに着いた時、蛮神セフィロトが木々を飲み込んでいた。生命を吸う咆哮が響き、森が揺れた。Nebelfeeは双剣を手に、霧を操って力を抑えようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は魔神の森での戦いに覚悟を固めた。</p>
+        <p>ウリエンジェが現れ、魔法を放った。彼女の白いローブが光を放ち、穏やかな声で語った。「セフィロトを止めねば」と。Nebelfeeは霧を濃くし、セフィロトの視界を奪った。彼女の双剣が根を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて根を断った。ウリエンジェの魔法が援護し、森が揺れた。</p>
+        <p>セフィロトが反撃し、生命の波が森を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が根を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。ウリエンジェの魔法が援護し、セフィロトが倒れた。森が息を吹き返し、静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。ウリエンジェは疲れ果てながらも、「よくやったね」と労った。彼女は森を見つめ、「希望が灯った」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>低地ドラヴァニアに静寂が広がり、木々が息を吹き返した。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。ウリエンジェは暁に報告するため去り、姉弟は森を見渡した。セフィロトの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、森の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。森の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。イシュガルドの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>魔神の森は鎮まり、姉弟の力がイシュガルドに希望をもたらした。霧と影がセフィロトを倒し、森に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
         <h2>第八章: 竜眼の丘の咆哮</h2>
-        <p>竜眼の丘でエスティニアンが竜の眼に飲み込まれ、ニーズヘッグが現れる。</p>
-        <p>リーン・ウォータースが叫び、Nebelfeeは霧で竜を守る。</p>
-        <p>Schattenfeeが影からエスティニアンに近づき、心を呼び覚ます。</p>
-        <p>竜の眼が輝き、戦いの終わりが近づいた。</p>
+        <p>竜眼の丘に着いた時、エスティニアンが竜の眼に飲み込まれていた。ニーズヘッグが現れ、咆哮が響いた。Nebelfeeは双剣を手に、霧を操って竜を守ろうとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は丘での戦いに覚悟を固めた。</p>
+        <p>リーン・ウォータースが叫び、援護に現れた。彼女の剣が光を放ち、鋭い声で語った。「エスティニアンを救え」と。Nebelfeeは霧を濃くし、ニーズヘッグの視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影からエスティニアンに近づき、彼の心を呼び覚ました。リーン・ウォータースの剣が援護し、丘が揺れた。</p>
+        <p>ニーズヘッグが反撃し、闇の波が丘を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が鱗を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。リーン・ウォータースの剣が援護し、竜の眼が輝いた。戦いの終わりが近づいた。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。リーン・ウォータースは疲れ果てながらも、「よくやったね」と労った。エスティニアンが解放され、「ありがとう」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
+        <p>竜眼の丘に静寂が広がり、空が清んだ。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。リーン・ウォータースとエスティニアンは暁に報告するため去り、姉弟は丘を見渡した。ニーズヘッグの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
+        <p>夜が訪れ、丘の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。丘の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。イシュガルドの危機が彼らを呼び、次の戦いが待っていた。</p>
+        <p>竜眼の丘の咆哮は鎮まり、姉弟の力がエスティニアンを救った。霧と影がニーズヘッグに一歩近づき、丘に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+
         <h2>第九章: ファルコンネストの祈り</h2>
-        <p>ファルコンネストでミンフィリアが祈り、Nebelfeeの霧が仲間を守る。</p>
-        <p>Schattenfeeが忍術でニーズヘッグに迫り、アイメリクが命を賭ける。</p>
-        <p>アルフィノとイダが魔法と癒しで支え、希望が雪に輝いた。</p>
-        <p>竜の咆哮が響き、最後の戦いが始まる。</p>
+        <p>ファルコンネストに着いた時、ミンフィリアが祈りを捧げていた。Nebelfeeは霧を操り、仲間を守った。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は最後の戦いに覚悟を固めた。アイメリクが命を賭け、ニーズヘッグに立ち向かった。</p>
+        <p>アルフィノとイダが援護に現れた。アルフィノの魔法が光を放ち、イダの癒しが仲間を支えた。Nebelfeeは霧を濃くし、ニーズヘッグの視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げてニーズヘッグに迫った。ミンフィリアの祈りが響き、希望が雪に輝いた。</p>
+        <p>ニーズヘッグが反撃し、闇の波がファルコンネストを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が鱗を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。アルフィノとイダの魔法が援護し、竜の咆哮が響いた。最後の戦いが始まった。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。ミンフィリアは疲れ果てながらも、「よくやったね」と労った。アイメリクの犠牲がニーズヘッグを弱め、姉弟は互いの手を握った。霧と影が交わり、勝利の喜びが広がった。</p>
+        <p>ファルコンネストに静寂が広がり、雪が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。アルフィノとイダは暁に報告するため去り、姉弟はファルコンネストを見渡した。ニーズヘッグの咆哮が消え、彼らの力が試された。霧と影が共存し、新たな希望が灯った。</p>
+        <p>夜が訪れ、ファルコンネストの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。ファルコンネストの静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。イシュガルドの危機が彼らを呼び、最後の戦いが待っていた。</p>
+        <p>ファルコンネストの祈りがイシュガルドに希望をもたらした。霧と影がニーズヘッグに近づき、雪に平穏が戻った。星空の下で、彼らは最後の戦いへの覚悟を固めた。</p>
+
         <h2>第十章: 蒼天の夜明け</h2>
-        <p>イシュガルドでニーズヘッグが咆哮し、Nebelfeeの霧が嵐となる。</p>
-        <p>Schattenfeeが忍術で心臓を突き、エスティニアンが解放された。</p>
-        <p>アイメリクの犠牲と共にニーズヘッグが倒れ、雪が静かに降る。</p>
-        <p>蒼天に夜明けが訪れ、姉弟は新たな旅を誓う。</p>
+        <p>イシュガルドに着いた時、ニーズヘッグが咆哮を上げていた。Nebelfeeは霧を嵐に変え、双剣を手に立ち向かった。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は最終決戦に覚悟を固めた。アイメリクの犠牲が響き、エスティニアンが立ち上がった。</p>
+        <p>ミンフィリアの祈りが響き、暁の仲間が集った。Nebelfeeは霧を濃くし、ニーズヘッグの視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を心臓に投げた。エスティニアンの槍が援護し、ニーズヘッグが揺れた。雪が静かに降り、戦いが激化した。</p>
+        <p>ニーズヘッグが最後の反撃を放ち、闇の波がイシュガルドを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が心臓を貫き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。アイメリクの犠牲と共にニーズヘッグが倒れ、エスティニアンが解放された。イシュガルドに静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。ミンフィリアは疲れ果てながらも、「よくやったね」と労った。エスティニアンは槍を手に、「君たちのおかげだ」と告げた。姉弟は互いの手を握り、蒼天に夜明けが訪れたことを感じた。</p>
+        <p>イシュガルドの空に朝日が昇った。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。ミンフィリアは暁に報告を準備し、姉弟は未来を見据えた。霧と影が交わり、新たな旅への力が育った。イシュガルドの危機が終わり、平穏が戻った。</p>
+        <p>朝日の下、Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。イシュガルドの静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。蒼天の未来が彼らを呼び、新たな旅が始まった。</p>
+        <p>蒼天の夜明けがイシュガルドに希望をもたらした。霧と影がニーズヘッグを倒し、新たな時代が幕を開けた。朝日の下で、彼らは次の冒険への誓いを立てた。</p>
+
+        <h2>後日譚: 蒼天の誓い</h2>
+        <p>ニーズヘッグを倒した後、NebelfeeとSchattenfeeはイシュガルドで休息の日々を過ごした。姉は12歳、弟は9歳で、暁の拠点に戻る前に聖堂を見上げていた。ミンフィリアが二人を抱きしめ、「君たちのおかげで和平が近づいた」と涙を浮かべた。Nebelfeeは双剣を手に、母の意志を感じた。Schattenfeeは手裏剣を握り、父の遺志を胸に刻んだ。</p>
+        <p>イシュガルドの雪原は静けさを取り戻し、霧が木々を包んだ。Nebelfeeは霧を操り、雪原の空気を清めた。Schattenfeeは影に隠れ、静かに休息した。アルフィノが駆け寄り、「すごかったよ！お疲れ様」と笑顔を見せた。イゼルは竜の声を聞き、「これで終わりじゃない」と呟いた。姉弟は仲間たちの温かさに心を解いた。</p>
+        <p>ある夜、ミンフィリアは姉弟に新たな旅を提案した。「イシュガルドは救われた。でも、エオルゼアにはまだ試練がある」と。Nebelfeeは双剣を背に負い、「母の意志で進む」と誓った。Schattenfeeは手裏剣を腰に帯び、「父の遺志で戦う」と決めた。姉弟は互いの手を握り、次の冒険への覚悟を固めた。</p>
+        <p>イシュガルドで訓練が再開された。Nebelfeeは霧を操る術を磨き、Schattenfeeは影の技を極めた。暁の仲間たちが彼らを支え、エオルゼアの未来を守る準備を整えた。姉弟は互いを励まし、絆を深めた。霧と影が共存し、彼らの力が育った。</p>
+        <p>ある朝、姉弟は雪原の奥で休息した。Nebelfeeは霧を見上げ、母ミスティアの笑顔を思い出した。Schattenfeeは影に触れ、父カゲロウの教えを感じた。霧と影が彼らを導き、エオルゼアの未来を照らした。姉弟の物語は続き、新たな試練が待っていた。</p>
+        <p>蒼天の誓いがイシュガルドに和平をもたらした。霧と影が彼らを守り、エオルゼアに希望をもたらした。運命の旅路はまだ続いていた。</p>
     </div>
     <div class="story-nav">
         <a href="story-a-realm-reborn.html">前章: 新生エオルゼア</a>
         <a href="story-stormblood.html">次章: 紅蓮の解放者</a>
     </div>
+
+    <footer>
+        <div class="footer-nav">
+            <a href="story-a-realm-reborn.html">前章: 新生エオルゼア</a>
+            <a href="story-stormblood.html">次章: 紅蓮の解放者</a>
+        </div>
+        <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
+    </footer>
+
     <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
